# fm-review-system

./: .coverage  .cursorignore  .env.example  .gitignore  .mcp.json  .s3_setup_dTTz5RO8x  AGENT_0_CREATOR.md  AGENT_1_ARCHITECT.md  AGENT_2_ROLE_SIMULATOR.md  AGENT_3_DEFENDER.md  AGENT_4_QA_TESTER.md  AGENT_5_TECH_ARCHITECT.md  AGENT_6_PRESENTER.md  AGENT_7_MIGRATOR.md  AGENT_8_EPC_DESIGNER.md  AGENT_PROTOCOL.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  HANDOFF.md  PROMPTS.md  README.md  TODOS.md  audit-fm-review.md  fm-review-system.sln  pyproject.toml  pytest.ini  reaudit-fm-review.md  requirements.txt  todos.md
.archive_notion/: fm-notion-template-structure.md  notion-config.json  notion-databases.md  publish_to_notion.py  verify_notion.py
.claude/: settings.json
.patches/: 2026-02-13_AGENT-1_SHPMNT-PROFIT_boundary-conditions.md  2026-02-13_AGENT-1_SHPMNT-PROFIT_broken-crossref.md  2026-02-13_AGENT-1_SHPMNT-PROFIT_misleading-name.md  2026-02-13_AGENT-1_SHPMNT-PROFIT_note-contradiction.md  2026-02-13_AGENT-4_SHPMNT-PROFIT_untestable-approval-cycle.md  2026-02-13_AGENT-5_SHPMNT-PROFIT_missing-terminal-state.md  EVOLUTION_LOG.md  README.md
PROJECT_SHPMNT_PROFIT/: README.md
agents/: AGENT_0_CREATOR.md  AGENT_10_SE_1C.md  AGENT_1_ARCHITECT.md  AGENT_2_ROLE_SIMULATOR.md  AGENT_3_DEFENDER.md  AGENT_4_QA_TESTER.md  AGENT_5_TECH_ARCHITECT.md  AGENT_6_PRESENTER.md  AGENT_7_MIGRATOR.md  AGENT_7_PUBLISHER.md  AGENT_8_BPMN_DESIGNER.md  AGENT_8_EPC_DESIGNER.md  AGENT_9_SE_GO.md  COMMON_RULES.md  EVOLVE.md  ORCHESTRATOR_HELPER.md
audits/: audit-fm-review-system-deep.md  audit-fm-review-system.md  reaudit-fm-review-system.md
backups/: FM-LS-PROFIT_v8_20260205_200346.json
config/: pipeline.json
docs/: AGENT_TEMPLATE.md  ARCHITECT_WORKPLAN.md  AUDIT_REPORT.md  CHANGELOG.md  CONFLUENCE_REQUIREMENTS.md  CONFLUENCE_TEMPLATE.md  CONTRACT_CONFLUENCE_FM.md  DOCX_EDIT_SKILL.md.deprecated  FC_IMPLEMENTATION_REPORT.md  FINAL_AUDIT_AND_ARCHITECTURE.md  FINDINGS_LEDGER.md  IMPROVEMENT_ROADMAP.md  LEAD_AUDITOR_FULL_AUDIT.md  MODEL_SELECTION.md  MULTI_AGENT_AUDIT_REPORT.md  ORCHESTRATOR_BOOTSTRAP_PROMPT.md  P2_P3_WORKPLAN.md  PATCH_INSTRUCTIONS.md  PROJECT_CONTEXT.md  PROMPTS.md  PROMPT_IMPROVE_AGENT_SYSTEM.md  READINESS_CHECK.md  SETUP_PLUGINS.md  TODOS.md  UNIVERSAL_AUDIT_PROMPT.md  WORKPLAN.md  fm_page_id.txt  install-1c-extension.md  notion-config.json  tz-1c-kafka-integration.md
infra/: fm-tg-bot.service
knowledge-base/: 1c-landscape.md  README.md  business-processes.md  company-org-ldap.md  company-profile.md  confluence-index.md  infrastructure.md  integrations.md  project-sbs.md  project-shpmnt-profit.md  security.md  teams.md
logs/: 2026-02-17_agent2_business_session.md  README.md
schemas/: agent-contracts.json
scripts/: add_navigation.py  agent0_new.sh  agent1_audit.sh  agent2_simulate.sh  agent3_defend.sh  agent4_test.sh  agent5_architect.sh  agent6_present.sh  agent7_migrate.sh  agent8_epc.sh  check-secrets.sh  check_confluence_macros.py  fm_version.sh  (+49 more)
(+479 files in other folders)
