[project]
name = "fm-review-system"
version = "1.0.0"
description = "9 AI agents for 1C Functional Model lifecycle"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk==0.0.25",
    "python-docx==1.2.0",
    "beautifulsoup4==4.14.3",
    "langfuse==3.14.4",
    "tenacity==9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.23",
    "bandit>=1.9",
    "pip-audit>=2.10",
]

[tool.bandit]
# B310: urllib.urlopen — all calls go to hardcoded Confluence HTTPS URL,
# not user-controlled input. False positive for internal API client.
skips = ["B310"]
exclude_dirs = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow-running",
]
