[project]
name = "fm-review-system"
version = "1.0.0"
description = "9 AI agents for 1C Functional Model lifecycle"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk==0.0.25",
    "python-docx==1.2.0",
    "beautifulsoup4==4.14.3",
    "langfuse==3.14.5",
    "tenacity==9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.23",
    "bandit>=1.9",
    "pip-audit>=2.10",
    "ruff>=0.11",
]

[tool.bandit]
# B310: urllib.urlopen — all calls go to hardcoded Confluence HTTPS URL,
# not user-controlled input. False positive for internal API client.
skips = ["B310"]
exclude_dirs = ["tests/"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]
ignore = [
    "E501",   # line-too-long — handled by formatter
    "E402",   # module-import-not-at-top — sys.path setup before imports
    "E741",   # ambiguous-variable-name — l/O used in short loops
    "S101",   # assert used — needed in scripts
    "S310",   # audit-url-open — internal Confluence/Langfuse API calls
    "S603",   # subprocess-without-shell-check — internal scripts
    "S606",   # start-process-without-shell — os.execve for re-exec
    "S607",   # start-process-with-partial-path — trusted binaries
    "S108",   # hardcoded-tmp — temp dirs in scripts
    "S110",   # try-except-pass — intentional in resilient code
    "S314",   # xml-bad-etree-parse — internal trusted XML
    "B904",   # raise-without-from-inside-except — too noisy for scripts
    "B905",   # zip-without-explicit-strict — zip used safely
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow-running",
]
